--- a/content/w2.html
+++ b/content/w2.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='紙本筆記.html'>紙本筆記</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <br /><h1>紙本筆記</h1><br />w1 << <a href='w1.html'>Previous</a> </div>
+    <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <br /><h1>w2</h1>
+<h4>當週進度</h4>
+<p>更新python至新版本,進行小組直播討論並分配分組作業</p><br />w1 << <a href='w1.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
