--- a/content/About.html
+++ b/content/About.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='紙本筆記.html'>紙本筆記</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a></li>
                       </ul>
                 </nav>
               </div>
