--- a/content/w1.html
+++ b/content/w1.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='紙本筆記.html'>紙本筆記</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,8 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <a href='紙本筆記.html'>Next</a> >> 紙本筆記<br /><h1>w1</h1>
-<br />Develop << <a href='Develop.html'>Previous</a> <a href='紙本筆記.html'>Next</a> >> 紙本筆記</div>
+    <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <a href='w2.html'>Next</a> >> w2<br /><h1>w1</h1>
+<h4>當週進度</h4>
+<p>介紹學期目標和進度和建立倉儲cd2020和網頁</p>
+<br />Develop << <a href='Develop.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
         
     <!-- footer -->
       <div class="container">
