--- a/content/w1.html
+++ b/content/w1.html
@@ -155,9 +155,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <a href='w2.html'>Next</a> >> w2<br /><h1>w1</h1>
-<h4>當週進度</h4>
-<p>介紹學期目標和進度和建立倉儲cd2020和網頁</p>
-<br />Develop << <a href='Develop.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
+<h4>本週進度</h4>
+<p>介紹學期目標和進度和建立倉儲cd2020和網頁</p><br />Develop << <a href='Develop.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
         
     <!-- footer -->
       <div class="container">
