--- a/content/w2.html
+++ b/content/w2.html
@@ -155,7 +155,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <br /><h1>w2</h1>
-<h4>當週進度</h4>
+<h4>本週進度</h4>
 <p>更新python至新版本,進行小組直播討論並分配分組作業</p><br />w1 << <a href='w1.html'>Previous</a> </div>
         
     <!-- footer -->
