--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -14,8 +14,7 @@
 <p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
 <p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數.</p>
 <h1>w1</h1>
-<h4>當週進度</h4>
-<p>介紹學期目標和進度和建立倉儲cd2020和網頁</p>
-<h1>w2</h1>
-<h4>當週進度</h4>
-<p>介紹學期目標和進度和建立倉儲cd2020和網頁</p>
+<h4>本週進度</h4>
+<p>介紹學期目標和進度和建立倉儲cd2020和網頁</p><h1>w2</h1>
+<h4>本週進度</h4>
+<p>更新python至新版本,進行小組直播討論並分配分組作業</p>
