--- a/content/w6.html
+++ b/content/w6.html
@@ -154,10 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <a href='w2.html'>Next</a> >> w2<br /><h1>w1</h1>
+    <div id="tipue_search_content">w2 << <a href='w2.html'>Previous</a> <br /><h1>w6</h1>
 <h4>本週進度</h4>
-<p>介紹學期目標和進度和建立倉儲cd2020和網頁</p>
-<br />每周進度 << <a href='每周進度.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
+<p>進行小組直播討論,分配工作內容 : 翻譯</p><br />w2 << <a href='w2.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
