--- a/content/每周進度.html
+++ b/content/每周進度.html
@@ -154,10 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <a href='w2.html'>Next</a> >> w2<br /><h1>w1</h1>
-<h4>本週進度</h4>
-<p>介紹學期目標和進度和建立倉儲cd2020和網頁</p>
-<br />每周進度 << <a href='每周進度.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
+    <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>每周進度</h1>
+<br />Develop << <a href='Develop.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
         
     <!-- footer -->
       <div class="container">
