--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -19,7 +19,8 @@
 <p>介紹學期目標和進度和建立倉儲cd2020和網頁</p>
 <h2>w2</h2>
 <h4>本週進度</h4>
-<p>更新python至新版本,進行小組直播討論並分配分組作業</p>
+<p>更新python至3.8.2,進行小組直播討論並分配分組作業</p>
 <h2>w6</h2>
 <h4>本週進度</h4>
 <p>進行小組直播討論,分配工作內容 : 翻譯</p>
+<h1>Assiganment2</h1>
