--- a/config/content.htm
+++ b/config/content.htm
@@ -19,6 +19,11 @@
 <p>介紹學期目標和進度和建立倉儲cd2020和網頁</p>
 <h2>w2</h2>
 <h4>本週進度</h4>
-<p>更新python至3.8.2,進行小組直播討論並分配分組作業</p><h2>w6</h2>
+<p>更新python至3.8.2,進行小組直播討論並分配分組作業</p>
+<h2>w6</h2>
 <h4>本週進度</h4>
 <p>進行小組直播討論,分配工作內容 : 翻譯</p>
+<h1>Assiganment2</h1>
+<h4>Top 0感想</h4>
+<p>40723153 吳佳穎</p>
+<p>合作不只是行為更是一種未來的趨勢，從古至今合作的觀念一直是被推崇的，從【單絲不成線，獨木不成林】 、【萬人操弓，共射一招，招無不中】。等諺語就能知道。在工作上一個人或許可以迅速的決定所有事情，但一個人絕對比不上數個人加起來的能力，透過合作讓每個人發揮自己的特長讓效率以倍數增加。看完這個章節讓我更加理解到協同的重要性，而在協同前也需要做許多的準備，無論是個人心態的調整抑或是選用協同的工具都是非常重要的，我也學到了很多協同的優點，讓我印象深刻的是能讓客戶參與產品設計過程，透過讓客戶的參與能加速溝通的效率，更能讓消費端理解設計者的用意和進度過程，創造雙贏的局面。</p>
