--- a/content/w2.html
+++ b/content/w2.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w6.html'>w6</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w6.html'>w6</a></li></ul><li><a href='Assiganment2.html'>Assiganment2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -156,7 +156,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <a href='w6.html'>Next</a> >> w6<br /><h1>w2</h1>
 <h4>本週進度</h4>
-<p>更新python至3.8.2,進行小組直播討論並分配分組作業</p><br />w1 << <a href='w1.html'>Previous</a> <a href='w6.html'>Next</a> >> w6</div>
+<p>更新python至3.8.2,進行小組直播討論並分配分組作業</p>
+<br />w1 << <a href='w1.html'>Previous</a> <a href='w6.html'>Next</a> >> w6</div>
         
     <!-- footer -->
       <div class="container">
