--- a/config/content.htm
+++ b/config/content.htm
@@ -13,7 +13,15 @@
 <p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 的開發, 可以在一個目錄中放入 cmsimde, 然後將 up_dir 中的內容放到與 cmsimde 目錄同位階的地方, 使用 command 進入 cmsimde 目錄, 執行 python wsgi.py, 就可以啟動, 以瀏覽器 https://localhost:9443 就可以連接, 以 admin 作為管理者密碼, 就可以登入維護內容.</p>
 <p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
 <p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數.</p>
-<h1>每周進度</h1>
+<h1>直播紀錄</h1>
+<h2>w2</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/JXUKf0cfJcc" width="800"></iframe></p>
+<h2>w3</h2>
+<p><br/><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/QTfPD5bpeKc" width="800"></iframe></p>
+<h2>w5</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/ElNea4b1dX8" width="800"></iframe></p><h2>w6</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/B6jt5OAf424" width="800"></iframe></p><h2>w7</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/96y-KSUWDyE" width="800"></iframe></p><h1>每周進度</h1>
 <h2>w1</h2>
 <h4>本週進度</h4>
 <p>介紹學期目標和進度和建立倉儲cd2020和網頁</p>
