--- a/content/w2-1.html
+++ b/content/w2-1.html
@@ -154,8 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>每周進度</h1>
-<br />w7 << <a href='w7.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+    <div id="tipue_search_content">直播紀錄 << <a href='直播紀錄.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>w2-1</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/JXUKf0cfJcc" width="800"></iframe></p>
+<br />直播紀錄 << <a href='直播紀錄.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
         
     <!-- footer -->
       <div class="container">
