--- a/content/w2-2.html
+++ b/content/w2-2.html
@@ -154,8 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>每周進度</h1>
-<br />w7 << <a href='w7.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+    <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <a href='w6-2.html'>Next</a> >> w6-2<br /><h1>w2-2</h1>
+<h4>本週進度</h4>
+<p>更新python至3.8.2,進行小組直播討論並分配分組作業</p>
+<br />w1 << <a href='w1.html'>Previous</a> <a href='w6-2.html'>Next</a> >> w6-2</div>
         
     <!-- footer -->
       <div class="container">
