--- a/content/w5.html
+++ b/content/w5.html
@@ -154,8 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>每周進度</h1>
-<br />w7 << <a href='w7.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='w6-1.html'>Next</a> >> w6-1<br /><h1>w5</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/ElNea4b1dX8" width="800"></iframe></p><br />w3 << <a href='w3.html'>Previous</a> <a href='w6-1.html'>Next</a> >> w6-1</div>
         
     <!-- footer -->
       <div class="container">
