--- a/content/w6-2.html
+++ b/content/w6-2.html
@@ -154,8 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>每周進度</h1>
-<br />w7 << <a href='w7.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+    <div id="tipue_search_content">w2-2 << <a href='w2-2.html'>Previous</a> <a href='Assiganment2.html'>Next</a> >> Assiganment2<br /><h1>w6-2</h1>
+<h4>本週進度</h4>
+<p>進行小組直播討論,分配工作內容 : 翻譯</p>
+<br />w2-2 << <a href='w2-2.html'>Previous</a> <a href='Assiganment2.html'>Next</a> >> Assiganment2</div>
         
     <!-- footer -->
       <div class="container">
