--- a/content/w7.html
+++ b/content/w7.html
@@ -154,8 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>每周進度</h1>
-<br />w7 << <a href='w7.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+    <div id="tipue_search_content">w6-1 << <a href='w6-1.html'>Previous</a> <a href='每周進度.html'>Next</a> >> 每周進度<br /><h1>w7</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/96y-KSUWDyE" width="800"></iframe></p><br />w6-1 << <a href='w6-1.html'>Previous</a> <a href='每周進度.html'>Next</a> >> 每周進度</div>
         
     <!-- footer -->
       <div class="container">
