--- a/content/直播紀錄.html
+++ b/content/直播紀錄.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w6.html'>w6</a></li></ul><li><a href='Assiganment2.html'>Assiganment2</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='直播紀錄.html'>直播紀錄</a><ul class='dropdown'><li><a href='w2-1.html'>w2-1</a><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='w6-1.html'>w6-1</a><li><a href='w7.html'>w7</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2-2.html'>w2-2</a><li><a href='w6-2.html'>w6-2</a></li></ul><li><a href='Assiganment2.html'>Assiganment2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,10 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w2 << <a href='w2.html'>Previous</a> <a href='Assiganment2.html'>Next</a> >> Assiganment2<br /><h1>w6</h1>
-<h4>本週進度</h4>
-<p>進行小組直播討論,分配工作內容 : 翻譯</p>
-<br />w2 << <a href='w2.html'>Previous</a> <a href='Assiganment2.html'>Next</a> >> Assiganment2</div>
+    <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <a href='w2-1.html'>Next</a> >> w2-1<br /><h1>直播紀錄</h1>
+<br />Develop << <a href='Develop.html'>Previous</a> <a href='w2-1.html'>Next</a> >> w2-1</div>
         
     <!-- footer -->
       <div class="container">
