--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -14,13 +14,12 @@
 <p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
 <p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數.</p>
 <h1>直播紀錄</h1>
-<h2>w2</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/JXUKf0cfJcc" width="800"></iframe></p>
-<h2>w3</h2>
-<p><br/><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/QTfPD5bpeKc" width="800"></iframe></p>
-<h2>w5</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/ElNea4b1dX8" width="800"></iframe></p><h2>w6</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/B6jt5OAf424" width="800"></iframe></p><h2>w7</h2>
+<h2>第二週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/JXUKf0cfJcc" width="500"></iframe></p><h2>第三週</h2>
+<p><br/><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/QTfPD5bpeKc" width="500"></iframe></p><h2>第五週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/ElNea4b1dX8" width="500"></iframe></p><h2>第六週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/B6jt5OAf424" width="500"></iframe></p><h2>第七週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/96y-KSUWDyE" width="800"></iframe></p>
 <h1>每周進度</h1>
 <h2>w1</h2>
 <h4>本週進度</h4>
@@ -31,7 +30,9 @@
 <h2>w6</h2>
 <h4>本週進度</h4>
 <p>進行小組直播討論,分配工作內容 : 翻譯</p>
-<h1>Assiganment2</h1>
+<h2>w7</h2>
+<p>本週是assiganmant2截止時間,這週課程也是採用線上教學模式,老師進行組別隨機抽點直播</p>
+<p><img caption="false" height="279" src="/images/未命名.png" width="300"/></p><h1>Assiganment2</h1>
 <h4>Top 0感想</h4>
 <p>40723153 吳佳穎</p>
 <p>合作不只是行為更是一種未來的趨勢，從古至今合作的觀念一直是被推崇的，從【單絲不成線，獨木不成林】 、【萬人操弓，共射一招，招無不中】。等諺語就能知道。在工作上一個人或許可以迅速的決定所有事情，但一個人絕對比不上數個人加起來的能力，透過合作讓每個人發揮自己的特長讓效率以倍數增加。看完這個章節讓我更加理解到協同的重要性，而在協同前也需要做許多的準備，無論是個人心態的調整抑或是選用協同的工具都是非常重要的，我也學到了很多協同的優點，讓我印象深刻的是能讓客戶參與產品設計過程，透過讓客戶的參與能加速溝通的效率，更能讓消費端理解設計者的用意和進度過程，創造雙贏的局面。</p>
