--- a/content/w2.html
+++ b/content/w2.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='直播紀錄.html'>直播紀錄</a><ul class='dropdown'><li><a href='w2-1.html'>w2-1</a><li><a href='w3.html'>w3</a><li><a href='w5.html'>w5</a><li><a href='w6-1.html'>w6-1</a><li><a href='w7.html'>w7</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2-2.html'>w2-2</a><li><a href='w6-2.html'>w6-2</a></li></ul><li><a href='Assiganment2.html'>Assiganment2</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='直播紀錄.html'>直播紀錄</a><ul class='dropdown'><li><a href='第二週.html'>第二週</a><li><a href='第三週.html'>第三週</a><li><a href='第五週.html'>第五週</a><li><a href='第六週.html'>第六週</a><li><a href='第七週.html'>第七週</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a></li></ul><li><a href='Assiganment2.html'>Assiganment2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,9 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">直播紀錄 << <a href='直播紀錄.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>w2-1</h1>
-<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/JXUKf0cfJcc" width="800"></iframe></p>
-<br />直播紀錄 << <a href='直播紀錄.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
+    <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <a href='w6.html'>Next</a> >> w6<br /><h1>w2</h1>
+<h4>本週進度</h4>
+<p>更新python至3.8.2,進行小組直播討論並分配分組作業</p>
+<br />w1 << <a href='w1.html'>Previous</a> <a href='w6.html'>Next</a> >> w6</div>
         
     <!-- footer -->
       <div class="container">
