新增直播討論內容\

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -15,12 +15,14 @@
 <p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數.</p>
 <h1>直播紀錄</h1>
 <h2>第二週</h2>
+<p>進行任務分派,並以小組方式完成assiganment 1</p>
+<p><img alt="" height="378" src="/images/57278.jpg" width="379"/></p>
+<p>課程討論直播紀錄</p>
 <p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/JXUKf0cfJcc" width="500"></iframe></p><h2>第三週</h2>
 <p><br/><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/QTfPD5bpeKc" width="500"></iframe></p><h2>第五週</h2>
 <p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/ElNea4b1dX8" width="500"></iframe></p><h2>第六週</h2>
 <p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/B6jt5OAf424" width="500"></iframe></p><h2>第七週</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/96y-KSUWDyE" width="800"></iframe></p>
-<h1>每周進度</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/96y-KSUWDyE" width="500"></iframe></p><h1>每周進度</h1>
 <h2>w1</h2>
 <h4>本週進度</h4>
 <p>介紹學期目標和進度和建立倉儲cd2020和網頁</p>
