--- a/content/第二週.html
+++ b/content/第二週.html
@@ -155,6 +155,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">直播紀錄 << <a href='直播紀錄.html'>Previous</a> <a href='第三週.html'>Next</a> >> 第三週<br /><h1>第二週</h1>
+<p>進行任務分派,並以小組方式完成assiganment 1</p>
+<p><img alt="" height="378" src="./../images/57278.jpg" width="379"/></p>
+<p>課程討論直播紀錄</p>
 <p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/JXUKf0cfJcc" width="500"></iframe></p><br />直播紀錄 << <a href='直播紀錄.html'>Previous</a> <a href='第三週.html'>Next</a> >> 第三週</div>
         
     <!-- footer -->
