--- a/content/第五週.html
+++ b/content/第五週.html
@@ -155,6 +155,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">第三週 << <a href='第三週.html'>Previous</a> <a href='第六週.html'>Next</a> >> 第六週<br /><h1>第五週</h1>
+<p>分配翻譯段落並將完成檔案上傳至個人網頁</p>
+<p><img alt="" height="274" src="./../images/57277.jpg" width="500"/></p>
+<p>討論課程直播紀錄</p>
 <p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/ElNea4b1dX8" width="500"></iframe></p><br />第三週 << <a href='第三週.html'>Previous</a> <a href='第六週.html'>Next</a> >> 第六週</div>
         
     <!-- footer -->
