--- a/config/content.htm
+++ b/config/content.htm
@@ -30,7 +30,14 @@
 <p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/B6jt5OAf424" width="500"></iframe></p>
 <h2>第七週</h2>
 <p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/96y-KSUWDyE" width="500"></iframe></p>
-<h1>每周進度</h1>
+<h2>第八週</h2>
+<p>1.利用onshape繪製車子(不可過於簡易,要有懸吊系統跟一些複雜度)<br/>(1)了解零件檔案格式及如何轉檔導入coppeliasim<br/>(2)轉檔格式有幾個版本需要了解</p>
+<p>協同人員:40723104,40723107,40723122,40723140,40723149,40723151,40723153,40723154</p>
+<p>2.利用 CoppeliaSim Python Remote API 控制四輪車<br/>(1)了解 Python Remote API程式,並且能夠實際應用,對車子進行遠端遙控</p>
+<p>協同人員:40723114,40723115,40723118,40723123,40723155</p>
+<p>3.全體人員須了解 Ubuntu 20.04 虛擬主機<br/>(1) 了解 NAT ,讓虛擬主機可以上網,做內外IP的轉換</p>
+<p>(2)了解 Brid ged Adapter ,可建立獨立service,希望藉由兩片網卡,可以對外連線</p>
+<p>(3)了解 Host - only Adapte</p><h1>每周進度</h1>
 <h2>w1</h2>
 <h4>本週進度</h4>
 <p>介紹學期目標和進度和建立倉儲cd2020和網頁</p>
@@ -94,7 +101,7 @@
 <p><img caption="false" height="279" src="/images/未命名.png" width="300"/></p>
 <p>直播紀錄影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/Y04PMdEY6P4" width="420"></iframe></p>
-<h1>Assiganment2</h1>
+<h2>w9</h2><h1>Assiganment2</h1>
 <h4>Top 0感想</h4>
 <p>40723153 吳佳穎</p>
 <p>合作不只是行為更是一種未來的趨勢，從古至今合作的觀念一直是被推崇的，從【單絲不成線，獨木不成林】 、【萬人操弓，共射一招，招無不中】。等諺語就能知道。在工作上一個人或許可以迅速的決定所有事情，但一個人絕對比不上數個人加起來的能力，透過合作讓每個人發揮自己的特長讓效率以倍數增加。看完這個章節讓我更加理解到協同的重要性，而在協同前也需要做許多的準備，無論是個人心態的調整抑或是選用協同的工具都是非常重要的，我也學到了很多協同的優點，讓我印象深刻的是能讓客戶參與產品設計過程，透過讓客戶的參與能加速溝通的效率，更能讓消費端理解設計者的用意和進度過程，創造雙贏的局面。</p>
