--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -30,7 +30,14 @@
 <p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/B6jt5OAf424" width="500"></iframe></p>
 <h2>第七週</h2>
 <p><iframe allowfullscreen="allowfullscreen" height="375" src="//www.youtube.com/embed/96y-KSUWDyE" width="500"></iframe></p>
-<h2>第八週</h2><h1>每周進度</h1>
+<h2>第八週</h2>
+<p>1.利用onshape繪製車子(不可過於簡易,要有懸吊系統跟一些複雜度)<br/>(1)了解零件檔案格式及如何轉檔導入coppeliasim<br/>(2)轉檔格式有幾個版本需要了解</p>
+<p>協同人員:40723104,40723107,40723122,40723140,40723149,40723151,40723153,40723154</p>
+<p>2.利用 CoppeliaSim Python Remote API 控制四輪車<br/>(1)了解 Python Remote API程式,並且能夠實際應用,對車子進行遠端遙控</p>
+<p>協同人員:40723114,40723115,40723118,40723123,40723155</p>
+<p>3.全體人員須了解 Ubuntu 20.04 虛擬主機<br/>(1) 了解 NAT ,讓虛擬主機可以上網,做內外IP的轉換</p>
+<p>(2)了解 Brid ged Adapter ,可建立獨立service,希望藉由兩片網卡,可以對外連線</p>
+<p>(3)了解 Host - only Adapte</p><h1>每周進度</h1>
 <h2>w1</h2>
 <h4>本週進度</h4>
 <p>介紹學期目標和進度和建立倉儲cd2020和網頁</p>
