--- a/content/w9.html
+++ b/content/w9.html
@@ -154,7 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='Assiganment2.html'>Next</a> >> Assiganment2<br /><h1>w9</h1><br />w7 << <a href='w7.html'>Previous</a> <a href='Assiganment2.html'>Next</a> >> Assiganment2</div>
+    <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='Assiganment2.html'>Next</a> >> Assiganment2<br /><h1>w9</h1>
+<p>紙本筆記</p>
+<p><img caption="false" height="191" src="./../images/64580.jpg" width="400"/></p><br />w7 << <a href='w7.html'>Previous</a> <a href='Assiganment2.html'>Next</a> >> Assiganment2</div>
         
     <!-- footer -->
       <div class="container">
