w8直播內容更新

--- a/content/第八週.html
+++ b/content/第八週.html
@@ -161,7 +161,9 @@ img.add_border {
 <p>協同人員:40723114,40723115,40723118,40723123,40723155</p>
 <p>3.全體人員須了解 Ubuntu 20.04 虛擬主機<br/>(1) 了解 NAT ,讓虛擬主機可以上網,做內外IP的轉換</p>
 <p>(2)了解 Brid ged Adapter ,可建立獨立service,希望藉由兩片網卡,可以對外連線</p>
-<p>(3)了解 Host - only Adapte</p><br />第七週 << <a href='第七週.html'>Previous</a> <a href='每周進度.html'>Next</a> >> 每周進度</div>
+<p>(3)了解 Host - only Adapte</p>
+<p>繪圖內容分配</p>
+<p><img alt="" height="500" src="./../images/64586.jpg" width="283"/></p><br />第七週 << <a href='第七週.html'>Previous</a> <a href='每周進度.html'>Next</a> >> 每周進度</div>
         
     <!-- footer -->
       <div class="container">
