--- a/config/content.htm
+++ b/config/content.htm
@@ -37,7 +37,9 @@
 <p>協同人員:40723114,40723115,40723118,40723123,40723155</p>
 <p>3.全體人員須了解 Ubuntu 20.04 虛擬主機<br/>(1) 了解 NAT ,讓虛擬主機可以上網,做內外IP的轉換</p>
 <p>(2)了解 Brid ged Adapter ,可建立獨立service,希望藉由兩片網卡,可以對外連線</p>
-<p>(3)了解 Host - only Adapte</p><h1>每周進度</h1>
+<p>(3)了解 Host - only Adapte</p>
+<p>繪圖內容分配</p>
+<p><img alt="" height="500" src="/images/64586.jpg" width="283"/></p><h1>每周進度</h1>
 <h2>w1</h2>
 <h4>本週進度</h4>
 <p>介紹學期目標和進度和建立倉儲cd2020和網頁</p>
@@ -103,7 +105,7 @@
 <p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/Y04PMdEY6P4" width="420"></iframe></p>
 <h2>w9</h2>
 <p>紙本筆記</p>
-<p><img caption="false" height="191" src="/images/64580.jpg" width="400"/></p><h1>Assiganment2</h1>
+<p><img alt="" height="254" src="/images/64584.jpg" width="500"/></p><h1>Assiganment2</h1>
 <h4>Top 0感想</h4>
 <p>40723153 吳佳穎</p>
 <p>合作不只是行為更是一種未來的趨勢，從古至今合作的觀念一直是被推崇的，從【單絲不成線，獨木不成林】 、【萬人操弓，共射一招，招無不中】。等諺語就能知道。在工作上一個人或許可以迅速的決定所有事情，但一個人絕對比不上數個人加起來的能力，透過合作讓每個人發揮自己的特長讓效率以倍數增加。看完這個章節讓我更加理解到協同的重要性，而在協同前也需要做許多的準備，無論是個人心態的調整抑或是選用協同的工具都是非常重要的，我也學到了很多協同的優點，讓我印象深刻的是能讓客戶參與產品設計過程，透過讓客戶的參與能加速溝通的效率，更能讓消費端理解設計者的用意和進度過程，創造雙贏的局面。</p>
