--- a/content/w9.html
+++ b/content/w9.html
@@ -156,7 +156,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='Assiganment2.html'>Next</a> >> Assiganment2<br /><h1>w9</h1>
 <p>紙本筆記</p>
-<p><img caption="false" height="191" src="./../images/64580.jpg" width="400"/></p><br />w7 << <a href='w7.html'>Previous</a> <a href='Assiganment2.html'>Next</a> >> Assiganment2</div>
+<p><img alt="" height="254" src="./../images/64584.jpg" width="500"/></p><br />w7 << <a href='w7.html'>Previous</a> <a href='Assiganment2.html'>Next</a> >> Assiganment2</div>
         
     <!-- footer -->
       <div class="container">
