--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -37,11 +37,15 @@
 <p>協同人員:40723114,40723115,40723118,40723123,40723155</p>
 <p>3.全體人員須了解 Ubuntu 20.04 虛擬主機<br/>(1) 了解 NAT ,讓虛擬主機可以上網,做內外IP的轉換</p>
 <p>(2)了解 Brid ged Adapter ,可建立獨立service,希望藉由兩片網卡,可以對外連線</p>
-<p>(3)了解 Host - only Adapte</p><h1>每周進度</h1>
+<p>(3)了解 Host - only Adapte</p>
+<p>繪圖內容分配</p>
+<p><img alt="" height="500" src="/images/64586.jpg" width="283"/></p>
+<h1>每周進度</h1>
 <h2>w1</h2>
 <h4>本週進度</h4>
 <p>介紹學期目標和進度和建立倉儲cd2020和網頁</p>
-<p><img alt="" height="432" src="/images/3444.png" width="768"/></p><h2>w2</h2>
+<p><img alt="" height="432" src="/images/3444.png" width="768"/></p>
+<h2>w2</h2>
 <h4>本週進度</h4>
 <p>更新python至3.8.2</p>
 <p><img alt="" height="450" src="/images/python.png" width="800"/></p>
@@ -51,7 +55,8 @@
 <p>並選擇安裝位置後將python安裝到隨身碟中的Y槽裡</p>
 <p>並使用start_mdecourse.bat 批次檔</p>
 <p>將<span>批次檔中的py373改為安裝python 3.8.2版本的資料夾</span></p>
-<p><span>並將新版本的資料夾命名為py382即可完成這次更新</span></p><h2>w3</h2>
+<p><span>並將新版本的資料夾命名為py382即可完成這次更新</span></p>
+<h2>w3</h2>
 <h4>本週進度</h4>
 <p>以小組方式進行亂數分組研究 以下是程式碼代表的內容如下</p>
 <p><strong>1. random.random()</strong></p>
@@ -93,7 +98,8 @@
 <p>　　sli = random.sample(num, 3)</p>
 <p>　　print (sli)</p>
 <p>　　輸出結果：[2, 4, 5]</p>
-<p>參考資料: https://codertw.com/%E7%A8%8B%E5%BC%8F%E8%AA%9E%E8%A8%80/357241/</p><h2>w6</h2>
+<p>參考資料: https://codertw.com/%E7%A8%8B%E5%BC%8F%E8%AA%9E%E8%A8%80/357241/</p>
+<h2>w6</h2>
 <h4>本週進度</h4>
 <p>進行小組直播討論,分配工作內容 : 翻譯</p>
 <h2>w7</h2>
@@ -103,7 +109,9 @@
 <p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/Y04PMdEY6P4" width="420"></iframe></p>
 <h2>w9</h2>
 <p>紙本筆記</p>
-<p><img alt="" height="254" src="/images/64584.jpg" width="500"/></p><h1>Assiganment2</h1>
+<p><img alt="" height="254" src="/images/64584.jpg" width="500"/></p>
+<h1>Assiganment1</h1>
+<h1>Assiganment2</h1>
 <h4>Top 0感想</h4>
 <p>40723153 吳佳穎</p>
 <p>合作不只是行為更是一種未來的趨勢，從古至今合作的觀念一直是被推崇的，從【單絲不成線，獨木不成林】 、【萬人操弓，共射一招，招無不中】。等諺語就能知道。在工作上一個人或許可以迅速的決定所有事情，但一個人絕對比不上數個人加起來的能力，透過合作讓每個人發揮自己的特長讓效率以倍數增加。看完這個章節讓我更加理解到協同的重要性，而在協同前也需要做許多的準備，無論是個人心態的調整抑或是選用協同的工具都是非常重要的，我也學到了很多協同的優點，讓我印象深刻的是能讓客戶參與產品設計過程，透過讓客戶的參與能加速溝通的效率，更能讓消費端理解設計者的用意和進度過程，創造雙贏的局面。</p>
