--- a/content/w1.html
+++ b/content/w1.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='直播紀錄.html'>直播紀錄</a><ul class='dropdown'><li><a href='第二週.html'>第二週</a><li><a href='第三週.html'>第三週</a><li><a href='第五週.html'>第五週</a><li><a href='第六週.html'>第六週</a><li><a href='第七週.html'>第七週</a><li><a href='第八週.html'>第八週</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w9.html'>w9</a></li></ul><li><a href='Assiganment2.html'>Assiganment2</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='直播紀錄.html'>直播紀錄</a><ul class='dropdown'><li><a href='第二週.html'>第二週</a><li><a href='第三週.html'>第三週</a><li><a href='第五週.html'>第五週</a><li><a href='第六週.html'>第六週</a><li><a href='第七週.html'>第七週</a><li><a href='第八週.html'>第八週</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w9.html'>w9</a></li></ul><li><a href='Assiganment1.html'>Assiganment1</a><li><a href='Assiganment2.html'>Assiganment2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -157,7 +157,8 @@ img.add_border {
     <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <a href='w2.html'>Next</a> >> w2<br /><h1>w1</h1>
 <h4>本週進度</h4>
 <p>介紹學期目標和進度和建立倉儲cd2020和網頁</p>
-<p><img alt="" height="432" src="./../images/3444.png" width="768"/></p><br />每周進度 << <a href='每周進度.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
+<p><img alt="" height="432" src="./../images/3444.png" width="768"/></p>
+<br />每周進度 << <a href='每周進度.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
         
     <!-- footer -->
       <div class="container">
