修復網頁問題

--- a/content/w7.html
+++ b/content/w7.html
@@ -154,50 +154,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w2 << <a href='w2.html'>Previous</a> <a href='w6.html'>Next</a> >> w6<br /><h1>w3</h1>
-<h4>本週進度</h4>
-<p>以小組方式進行亂數分組研究 以下是程式碼代表的內容如下</p>
-<p><strong>1. random.random()</strong></p>
-<p>　　random.random()方法返回一個隨機數，其在0至1的範圍之內，以下是其具體用法：</p>
-<p>　　import random</p>
-<p>　　print (“隨機數: “, random.random())</p>
-<p>　　輸出結果：0.22867521257116</p>
-<p><strong>2. random.uniform()</strong></p>
-<p>　　random.uniform()是在指定範圍內生成隨機數，其有兩個引數，一個是範圍上限，一個是範圍下線，具體用法如下：</p>
-<p>　　import random</p>
-<p>　　print (random.uniform(2, 6))</p>
-<p>　　輸出結果：3.62567571297255</p>
-<p><strong>3. random.randint()</strong></p>
-<p>　　random.randint()是隨機生成指定範圍內的整數，其有兩個引數，一個是範圍上限，一個是範圍下線，具體用法如下：</p>
-<p>　　import random</p>
-<p>　　print (random.randint(6,8))</p>
-<p>　　輸出結果：8</p>
-<p><strong>4. random.randrange()</strong></p>
-<p>　　random.randrange()是在指定範圍內，按指定基數遞增的集合中獲得一個隨機數，有三個引數，前兩個引數代表範圍上限和下限，第三個引數是遞增增量，具體用法如下：</p>
-<p>　　import random</p>
-<p>　　print (random.randrange(6, 28, 3))</p>
-<p>　　輸出結果：15</p>
-<p><strong>5. random.choice()</strong></p>
-<p>　　random.choice()是從序列中獲取一個隨機元素，具體用法如下：</p>
-<p>　　import random</p>
-<p>　　print (random.choice(“www.jb51.net”))</p>
-<p>　　輸出結果：o</p>
-<p><strong>6. random.shuffle()</strong></p>
-<p>　　random.shuffle()函式是將一個列表中的元素打亂，隨機排序，具體用法如下：</p>
-<p>　　import random</p>
-<p>　　num = [1, 2, 3, 4, 5]</p>
-<p>　　random.shuffle(num)</p>
-<p>　　print (num)</p>
-<p>　　輸出結果：[3, 5, 2, 4, 1]</p>
-<p><strong>7. random.sample()<br/></strong></p>
-<p>　　random.sample()函式是從指定序列中隨機獲取指定長度的片段，原有序列不會改變，有兩個引數，第一個引數代表指定序列，第二個引數是需獲取的片段長度，具體用法如下：</p>
-<p>　　import random</p>
-<p>　　num = [1, 2, 3, 4, 5]</p>
-<p>　　sli = random.sample(num, 3)</p>
-<p>　　print (sli)</p>
-<p>　　輸出結果：[2, 4, 5]</p>
-<p>參考資料: https://codertw.com/%E7%A8%8B%E5%BC%8F%E8%AA%9E%E8%A8%80/357241/</p>
-<br />w2 << <a href='w2.html'>Previous</a> <a href='w6.html'>Next</a> >> w6</div>
+    <div id="tipue_search_content">w6 << <a href='w6.html'>Previous</a> <a href='w9.html'>Next</a> >> w9<br /><h1>w7</h1>
+<p>本週是assiganmant2截止時間,這週課程也是採用線上教學模式,老師進行組別隨機抽點直播</p>
+<p><img caption="false" height="279" src="./../images/未命名.png" width="300"/></p>
+<p>直播紀錄影片</p>
+<p><iframe allowfullscreen="allowfullscreen" height="300" src="//www.youtube.com/embed/Y04PMdEY6P4" width="420"></iframe></p>
+<br />w6 << <a href='w6.html'>Previous</a> <a href='w9.html'>Next</a> >> w9</div>
         
     <!-- footer -->
       <div class="container">
