--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -115,3 +115,10 @@
 <h4>Top 0感想</h4>
 <p>40723153 吳佳穎</p>
 <p>合作不只是行為更是一種未來的趨勢，從古至今合作的觀念一直是被推崇的，從【單絲不成線，獨木不成林】 、【萬人操弓，共射一招，招無不中】。等諺語就能知道。在工作上一個人或許可以迅速的決定所有事情，但一個人絕對比不上數個人加起來的能力，透過合作讓每個人發揮自己的特長讓效率以倍數增加。看完這個章節讓我更加理解到協同的重要性，而在協同前也需要做許多的準備，無論是個人心態的調整抑或是選用協同的工具都是非常重要的，我也學到了很多協同的優點，讓我印象深刻的是能讓客戶參與產品設計過程，透過讓客戶的參與能加速溝通的效率，更能讓消費端理解設計者的用意和進度過程，創造雙贏的局面。</p>
+<h1>遇到問題</h1>
+<h2>網頁錯誤</h2>
+<p>在某次推送完畢之後動態網頁就無法打開編輯<img alt="" height="269" src="/images/網頁錯誤.png" width="500"/></p>
+<p><img alt="" height="348" src="/images/程式碼.png" width="500"/></p>
+<p><img alt="" height="350" src="/images/程式碼2.png" width="500"/></p>
+<p>發現無法解決問題詢問老師後從</p>
+<p></p>
