協同網頁編輯方式

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -120,5 +120,9 @@
 <p>在某次推送完畢之後動態網頁就無法打開編輯<img alt="" height="269" src="/images/網頁錯誤.png" width="500"/></p>
 <p><img alt="" height="348" src="/images/程式碼.png" width="500"/></p>
 <p><img alt="" height="350" src="/images/程式碼2.png" width="500"/></p>
-<p>發現無法解決問題詢問老師後從</p>
-<p></p>
+<p>發現無法解決問題詢問老師後從server端檢查</p>
+<p><img alt="" height="479" src="/images/檢查是否python錯誤.png" width="500"/></p>
+<p>發現是推送和python版本錯誤,還原成前一個版本後更改設定</p>
+<p><img alt="" height="487" src="/images/將舊版python更新.png" width="500"/></p>
+<p>重新執行就修復完成</p>
+<h2>協同網頁推送</h2>
