--- a/content/協同網頁推送.html
+++ b/content/協同網頁推送.html
@@ -154,8 +154,19 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">第八週 << <a href='第八週.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>每周進度</h1>
-<br />第八週 << <a href='第八週.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+    <div id="tipue_search_content">網頁錯誤 << <a href='網頁錯誤.html'>Previous</a> <br /><h1>協同網頁推送</h1>
+<p>在12~16週老師每週都會隨機抽取同學進行分組協同編輯網頁</p>
+<p>但每次推送常會有不小心將倉儲或是網頁爆炸的情況</p>
+<p>所以在推送之前需要的步驟有以下幾點</p>
+<p><img alt="" height="145" src="./../images/推送方法.png" width="500"/></p>
+<p>1.<span style="color: #808080; background-color: #ffff99;">git clone 倉儲</span> <span>→ 下載想要編輯的倉儲到近端</span></p>
+<p>2. <span style="background-color: #ffff99;">在進端進入該倉儲並git submodule init / git submodule update </span><span>→ 將老師遠端的cmsimde下載入倉儲內的cmsimde資料夾</span></p>
+<p>3. <span style="background-color: #ffff99;">在編輯完git pull </span><span>→ 確認近端沒有衝突或是無法推送的檔案</span></p>
+<p>4. <span style="background-color: #ffff99;">輸入git status </span><span>→ 確認遠端和近端即將要推送的資料有無錯誤</span></p>
+<p>若是遠端和近端有差異會產生以下訊息</p>
+<p><img alt="" height="333" src="./../images/偕同網頁修正.png" width="500"/></p>
+<p><span style="color: #ff0000;">解決方法:</span></p>
+<p>再次使用python 進入動態網頁將錯誤修正並轉為靜態網頁後即可成功推送無衝突版本</p><br />網頁錯誤 << <a href='網頁錯誤.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
