--- a/content/網頁錯誤.html
+++ b/content/網頁錯誤.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='直播紀錄.html'>直播紀錄</a><ul class='dropdown'><li><a href='第二週.html'>第二週</a><li><a href='第三週.html'>第三週</a><li><a href='第五週.html'>第五週</a><li><a href='第六週.html'>第六週</a><li><a href='第七週.html'>第七週</a><li><a href='第八週.html'>第八週</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w9.html'>w9</a></li></ul><li><a href='Assiganment1.html'>Assiganment1</a><li><a href='Assiganment2.html'>Assiganment2</a><li class='has-children'><a href='遇到問題.html'>遇到問題</a><ul class='dropdown'><li><a href='網頁錯誤.html'>網頁錯誤</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='直播紀錄.html'>直播紀錄</a><ul class='dropdown'><li><a href='第二週.html'>第二週</a><li><a href='第三週.html'>第三週</a><li><a href='第五週.html'>第五週</a><li><a href='第六週.html'>第六週</a><li><a href='第七週.html'>第七週</a><li><a href='第八週.html'>第八週</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w9.html'>w9</a></li></ul><li><a href='Assiganment1.html'>Assiganment1</a><li><a href='Assiganment2.html'>Assiganment2</a><li class='has-children'><a href='遇到問題.html'>遇到問題</a><ul class='dropdown'><li><a href='網頁錯誤.html'>網頁錯誤</a><li><a href='協同網頁推送.html'>協同網頁推送</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">遇到問題 << <a href='遇到問題.html'>Previous</a> <br /><h1>網頁錯誤</h1>
+    <div id="tipue_search_content">遇到問題 << <a href='遇到問題.html'>Previous</a> <a href='協同網頁推送.html'>Next</a> >> 協同網頁推送<br /><h1>網頁錯誤</h1>
 <p>在某次推送完畢之後動態網頁就無法打開編輯<img alt="" height="269" src="./../images/網頁錯誤.png" width="500"/></p>
 <p><img alt="" height="348" src="./../images/程式碼.png" width="500"/></p>
 <p><img alt="" height="350" src="./../images/程式碼2.png" width="500"/></p>
@@ -162,7 +162,8 @@ img.add_border {
 <p><img alt="" height="479" src="./../images/檢查是否python錯誤.png" width="500"/></p>
 <p>發現是推送和python版本錯誤,還原成前一個版本後更改設定</p>
 <p><img alt="" height="487" src="./../images/將舊版python更新.png" width="500"/></p>
-<p>重新執行就修復完成</p><br />遇到問題 << <a href='遇到問題.html'>Previous</a> </div>
+<p>重新執行就修復完成</p>
+<br />遇到問題 << <a href='遇到問題.html'>Previous</a> <a href='協同網頁推送.html'>Next</a> >> 協同網頁推送</div>
         
     <!-- footer -->
       <div class="container">
