--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -110,12 +110,11 @@
 <h2>w9</h2>
 <p>紙本筆記</p>
 <p><img alt="" height="254" src="/images/64584.jpg" width="500"/></p>
-<h1>Assiganment1</h1>
 <h1>Assiganment2</h1>
-<h4>Top 0感想</h4>
+<h2>Top 0感想</h2>
 <p>40723153 吳佳穎</p>
 <p>合作不只是行為更是一種未來的趨勢，從古至今合作的觀念一直是被推崇的，從【單絲不成線，獨木不成林】 、【萬人操弓，共射一招，招無不中】。等諺語就能知道。在工作上一個人或許可以迅速的決定所有事情，但一個人絕對比不上數個人加起來的能力，透過合作讓每個人發揮自己的特長讓效率以倍數增加。看完這個章節讓我更加理解到協同的重要性，而在協同前也需要做許多的準備，無論是個人心態的調整抑或是選用協同的工具都是非常重要的，我也學到了很多協同的優點，讓我印象深刻的是能讓客戶參與產品設計過程，透過讓客戶的參與能加速溝通的效率，更能讓消費端理解設計者的用意和進度過程，創造雙贏的局面。</p>
-<h1>遇到問題</h1>
+<h2>onshape繪圖</h2><h1>遇到問題</h1>
 <h2>網頁錯誤</h2>
 <p>在某次推送完畢之後動態網頁就無法打開編輯<img alt="" height="269" src="/images/網頁錯誤.png" width="500"/></p>
 <p><img alt="" height="348" src="/images/程式碼.png" width="500"/></p>
@@ -126,3 +125,15 @@
 <p><img alt="" height="487" src="/images/將舊版python更新.png" width="500"/></p>
 <p>重新執行就修復完成</p>
 <h2>協同網頁推送</h2>
+<p>在12~16週老師每週都會隨機抽取同學進行分組協同編輯網頁</p>
+<p>但每次推送常會有不小心將倉儲或是網頁爆炸的情況</p>
+<p>所以在推送之前需要的步驟有以下幾點</p>
+<p><img alt="" height="145" src="/images/推送方法.png" width="500"/></p>
+<p>1.<span style="color: #808080; background-color: #ffff99;">git clone 倉儲</span> <span>→ 下載想要編輯的倉儲到近端</span></p>
+<p>2. <span style="background-color: #ffff99;">在進端進入該倉儲並git submodule init / git submodule update </span><span>→ 將老師遠端的cmsimde下載入倉儲內的cmsimde資料夾</span></p>
+<p>3. <span style="background-color: #ffff99;">在編輯完git pull </span><span>→ 確認近端沒有衝突或是無法推送的檔案</span></p>
+<p>4. <span style="background-color: #ffff99;">輸入git status </span><span>→ 確認遠端和近端即將要推送的資料有無錯誤</span></p>
+<p>若是遠端和近端有差異會產生以下訊息</p>
+<p><img alt="" height="333" src="/images/偕同網頁修正.png" width="500"/></p>
+<p><span style="color: #ff0000;">解決方法:</span></p>
+<p>再次使用python 進入動態網頁將錯誤修正並轉為靜態網頁後即可成功推送無衝突版本</p>
