--- a/content/onshape繪圖.html
+++ b/content/onshape繪圖.html
@@ -154,18 +154,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>w2</h1>
-<h4>本週進度</h4>
-<p>更新python至3.8.2</p>
-<p><img alt="" height="450" src="./../images/python.png" width="800"/></p>
-<p>透過這個網站下載 <a href="https://s40723114.github.io/get_page/python%20%E6%9B%B4%E6%96%B0%E8%87%B33.8.2/Windows%20x86-64%20executable%20installer">Windows x86-64 executable installe</a>r 的版本</p>
-<p>完成下載後開啟並選擇下方的<span>Customize installation</span></p>
-<p><img alt="" height="409" src="./../images/步驟.png" width="666"/></p>
-<p>並選擇安裝位置後將python安裝到隨身碟中的Y槽裡</p>
-<p>並使用start_mdecourse.bat 批次檔</p>
-<p>將<span>批次檔中的py373改為安裝python 3.8.2版本的資料夾</span></p>
-<p><span>並將新版本的資料夾命名為py382即可完成這次更新</span></p>
-<br />w1 << <a href='w1.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
+    <div id="tipue_search_content">Top 0感想 << <a href='Top 0感想.html'>Previous</a> <a href='遇到問題.html'>Next</a> >> 遇到問題<br /><h1>onshape繪圖</h1>
+<p>作業其中一項是需要在onshape上繪圖,並協同共用零件進行組裝</p>
+<p>雖然沒有被分配到需要繪製零件但仍舊可以自己進行練習</p>
+<p>學習繪圖和共用的方法</p>
+<p><img alt="" height="500" src="./../images/83560.jpg" width="266"/></p>
+<p><span>▲工作分配圖</span></p>
+<p><span><img caption="false" height="225" src="./../images/onshap畫圖.png" width="500"/></span></p>
+<p><span>▲練習繪製各式零件</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Qg9Jmt8famM" width="560"></iframe><span>▲繪圖練習影片</span></p><br />Top 0感想 << <a href='Top 0感想.html'>Previous</a> <a href='遇到問題.html'>Next</a> >> 遇到問題</div>
         
     <!-- footer -->
       <div class="container">
