--- a/config/content.htm
+++ b/config/content.htm
@@ -110,12 +110,19 @@
 <h2>w9</h2>
 <p>紙本筆記</p>
 <p><img alt="" height="254" src="/images/64584.jpg" width="500"/></p>
-<h1>Assiganment1</h1>
 <h1>Assiganment2</h1>
-<h4>Top 0感想</h4>
+<h2>Top 0感想</h2>
 <p>40723153 吳佳穎</p>
 <p>合作不只是行為更是一種未來的趨勢，從古至今合作的觀念一直是被推崇的，從【單絲不成線，獨木不成林】 、【萬人操弓，共射一招，招無不中】。等諺語就能知道。在工作上一個人或許可以迅速的決定所有事情，但一個人絕對比不上數個人加起來的能力，透過合作讓每個人發揮自己的特長讓效率以倍數增加。看完這個章節讓我更加理解到協同的重要性，而在協同前也需要做許多的準備，無論是個人心態的調整抑或是選用協同的工具都是非常重要的，我也學到了很多協同的優點，讓我印象深刻的是能讓客戶參與產品設計過程，透過讓客戶的參與能加速溝通的效率，更能讓消費端理解設計者的用意和進度過程，創造雙贏的局面。</p>
-<h1>遇到問題</h1>
+<h2>onshape繪圖</h2>
+<p>作業其中一項是需要在onshape上繪圖,並協同共用零件進行組裝</p>
+<p>雖然沒有被分配到需要繪製零件但仍舊可以自己進行練習</p>
+<p>學習繪圖和共用的方法</p>
+<p><img alt="" height="500" src="/images/83560.jpg" width="266"/></p>
+<p><span>▲工作分配圖</span></p>
+<p><span><img caption="false" height="225" src="/images/onshap畫圖.png" width="500"/></span></p>
+<p><span>▲練習繪製各式零件</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Qg9Jmt8famM" width="560"></iframe><span>▲繪圖練習影片</span></p><h1>遇到問題</h1>
 <h2>網頁錯誤</h2>
 <p>在某次推送完畢之後動態網頁就無法打開編輯<img alt="" height="269" src="/images/網頁錯誤.png" width="500"/></p>
 <p><img alt="" height="348" src="/images/程式碼.png" width="500"/></p>
