--- a/content/Top 0感想.html
+++ b/content/Top 0感想.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='直播紀錄.html'>直播紀錄</a><ul class='dropdown'><li><a href='第二週.html'>第二週</a><li><a href='第三週.html'>第三週</a><li><a href='第五週.html'>第五週</a><li><a href='第六週.html'>第六週</a><li><a href='第七週.html'>第七週</a><li><a href='第八週.html'>第八週</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w9.html'>w9</a></li></ul><li><a href='Assiganment1.html'>Assiganment1</a><li><a href='Assiganment2.html'>Assiganment2</a><li class='has-children'><a href='遇到問題.html'>遇到問題</a><ul class='dropdown'><li><a href='網頁錯誤.html'>網頁錯誤</a><li><a href='協同網頁推送.html'>協同網頁推送</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='直播紀錄.html'>直播紀錄</a><ul class='dropdown'><li><a href='第二週.html'>第二週</a><li><a href='第三週.html'>第三週</a><li><a href='第五週.html'>第五週</a><li><a href='第六週.html'>第六週</a><li><a href='第七週.html'>第七週</a><li><a href='第八週.html'>第八週</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w9.html'>w9</a></li></ul><li class='has-children'><a href='Assiganment2.html'>Assiganment2</a><ul class='dropdown'><li><a href='Top 0感想.html'>Top 0感想</a><li><a href='onshape繪圖.html'>onshape繪圖</a></li></ul><li class='has-children'><a href='遇到問題.html'>遇到問題</a><ul class='dropdown'><li><a href='網頁錯誤.html'>網頁錯誤</a><li><a href='協同網頁推送.html'>協同網頁推送</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,8 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w9 << <a href='w9.html'>Previous</a> <a href='Assiganment2.html'>Next</a> >> Assiganment2<br /><h1>Assiganment1</h1>
-<br />w9 << <a href='w9.html'>Previous</a> <a href='Assiganment2.html'>Next</a> >> Assiganment2</div>
+    <div id="tipue_search_content">Assiganment2 << <a href='Assiganment2.html'>Previous</a> <a href='onshape繪圖.html'>Next</a> >> onshape繪圖<br /><h1>Top 0感想</h1>
+<p>40723153 吳佳穎</p>
+<p>合作不只是行為更是一種未來的趨勢，從古至今合作的觀念一直是被推崇的，從【單絲不成線，獨木不成林】 、【萬人操弓，共射一招，招無不中】。等諺語就能知道。在工作上一個人或許可以迅速的決定所有事情，但一個人絕對比不上數個人加起來的能力，透過合作讓每個人發揮自己的特長讓效率以倍數增加。看完這個章節讓我更加理解到協同的重要性，而在協同前也需要做許多的準備，無論是個人心態的調整抑或是選用協同的工具都是非常重要的，我也學到了很多協同的優點，讓我印象深刻的是能讓客戶參與產品設計過程，透過讓客戶的參與能加速溝通的效率，更能讓消費端理解設計者的用意和進度過程，創造雙贏的局面。</p>
+<br />Assiganment2 << <a href='Assiganment2.html'>Previous</a> <a href='onshape繪圖.html'>Next</a> >> onshape繪圖</div>
         
     <!-- footer -->
       <div class="container">
