直播會議記錄更新

--- a/content/index.html
+++ b/content/index.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='直播紀錄.html'>直播紀錄</a><ul class='dropdown'><li><a href='第二週.html'>第二週</a><li><a href='第三週.html'>第三週</a><li><a href='第五週.html'>第五週</a><li><a href='第六週.html'>第六週</a><li><a href='第七週.html'>第七週</a><li><a href='第八週.html'>第八週</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w9.html'>w9</a></li></ul><li class='has-children'><a href='Assiganment2.html'>Assiganment2</a><ul class='dropdown'><li><a href='Top 0感想.html'>Top 0感想</a><li><a href='onshape繪圖.html'>onshape繪圖</a></li></ul><li class='has-children'><a href='遇到問題.html'>遇到問題</a><ul class='dropdown'><li><a href='網頁錯誤.html'>網頁錯誤</a><li><a href='協同網頁推送.html'>協同網頁推送</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='直播紀錄.html'>直播紀錄</a><ul class='dropdown'><li><a href='第二週.html'>第二週</a><li><a href='第三週.html'>第三週</a><li><a href='第五週.html'>第五週</a><li><a href='第六週.html'>第六週</a><li><a href='第七週.html'>第七週</a><li><a href='第八週.html'>第八週</a><li><a href='第九週.html'>第九週</a><li><a href='第十週.html'>第十週</a><li><a href='第十一週.html'>第十一週</a><li><a href='第十二週.html'>第十二週</a><li><a href='第十三週.html'>第十三週</a><li><a href='第十四週.html'>第十四週</a><li><a href='第十五週.html'>第十五週</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w9.html'>w9</a></li></ul><li class='has-children'><a href='Assiganment2.html'>Assiganment2</a><ul class='dropdown'><li><a href='Top 0感想.html'>Top 0感想</a><li><a href='onshape繪圖.html'>onshape繪圖</a></li></ul><li class='has-children'><a href='遇到問題.html'>遇到問題</a><ul class='dropdown'><li><a href='網頁錯誤.html'>網頁錯誤</a><li><a href='協同網頁推送.html'>協同網頁推送</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Develop.html'>Next</a> >> Develop<br /><h1>About</h1>
+    <div id="tipue_search_content"> <a href='直播紀錄.html'>Next</a> >> 直播紀錄<br /><h1>About</h1>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
 <h4>利用 cmsimde 建立靜態網誌方法:</h4>
 <p>1. 在 github 建立倉儲, git clone 到近端</p>
@@ -165,7 +165,7 @@ img.add_border {
 <p>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</p>
 <p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
 <p>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p>
-<br /> <a href='Develop.html'>Next</a> >> Develop</div>
+<br /> <a href='直播紀錄.html'>Next</a> >> 直播紀錄</div>
         
     <!-- footer -->
       <div class="container">
