--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -9,10 +9,6 @@
 <p>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</p>
 <p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
 <p>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p>
-<h1>Develop</h1>
-<p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 的開發, 可以在一個目錄中放入 cmsimde, 然後將 up_dir 中的內容放到與 cmsimde 目錄同位階的地方, 使用 command 進入 cmsimde 目錄, 執行 python wsgi.py, 就可以啟動, 以瀏覽器 https://localhost:9443 就可以連接, 以 admin 作為管理者密碼, 就可以登入維護內容.</p>
-<p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
-<p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數.</p>
 <h1>直播紀錄</h1>
 <h2>第二週</h2>
 <p>進行任務分派,並以小組方式完成assiganment 1</p>
@@ -40,7 +36,14 @@
 <p>(3)了解 Host - only Adapte</p>
 <p>繪圖內容分配</p>
 <p><img alt="" height="500" src="/images/64586.jpg" width="283"/></p>
-<h1>每周進度</h1>
+<h2>第九週</h2>
+<h2>第十週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/HauW6F-ez7w" width="560"></iframe></p><h2>第十一週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Y-v5v3glZM4" width="560"></iframe></p><h2>第十二週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Fwt_LDqD964" width="560"></iframe></p><h2>第十三週</h2>
+<h2>第十四週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Oz_qyhhmopk" width="560"></iframe></p><h2>第十五週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T4lDjSueeW4" width="560"></iframe></p><h1>每周進度</h1>
 <h2>w1</h2>
 <h4>本週進度</h4>
 <p>介紹學期目標和進度和建立倉儲cd2020和網頁</p>
@@ -114,7 +117,16 @@
 <h2>Top 0感想</h2>
 <p>40723153 吳佳穎</p>
 <p>合作不只是行為更是一種未來的趨勢，從古至今合作的觀念一直是被推崇的，從【單絲不成線，獨木不成林】 、【萬人操弓，共射一招，招無不中】。等諺語就能知道。在工作上一個人或許可以迅速的決定所有事情，但一個人絕對比不上數個人加起來的能力，透過合作讓每個人發揮自己的特長讓效率以倍數增加。看完這個章節讓我更加理解到協同的重要性，而在協同前也需要做許多的準備，無論是個人心態的調整抑或是選用協同的工具都是非常重要的，我也學到了很多協同的優點，讓我印象深刻的是能讓客戶參與產品設計過程，透過讓客戶的參與能加速溝通的效率，更能讓消費端理解設計者的用意和進度過程，創造雙贏的局面。</p>
-<h2>onshape繪圖</h2><h1>遇到問題</h1>
+<h2>onshape繪圖</h2>
+<p>作業其中一項是需要在onshape上繪圖,並協同共用零件進行組裝</p>
+<p>雖然沒有被分配到需要繪製零件但仍舊可以自己進行練習</p>
+<p>學習繪圖和共用的方法</p>
+<p><img alt="" height="500" src="/images/83560.jpg" width="266"/></p>
+<p><span>▲工作分配圖</span></p>
+<p><span><img caption="false" height="225" src="/images/onshap畫圖.png" width="500"/></span></p>
+<p><span>▲練習繪製各式零件</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Qg9Jmt8famM" width="560"></iframe><span>▲繪圖練習影片</span></p>
+<h1>遇到問題</h1>
 <h2>網頁錯誤</h2>
 <p>在某次推送完畢之後動態網頁就無法打開編輯<img alt="" height="269" src="/images/網頁錯誤.png" width="500"/></p>
 <p><img alt="" height="348" src="/images/程式碼.png" width="500"/></p>
