--- a/content/第八週.html
+++ b/content/第八週.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='直播紀錄.html'>直播紀錄</a><ul class='dropdown'><li><a href='第二週.html'>第二週</a><li><a href='第三週.html'>第三週</a><li><a href='第五週.html'>第五週</a><li><a href='第六週.html'>第六週</a><li><a href='第七週.html'>第七週</a><li><a href='第八週.html'>第八週</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w9.html'>w9</a></li></ul><li class='has-children'><a href='Assiganment2.html'>Assiganment2</a><ul class='dropdown'><li><a href='Top 0感想.html'>Top 0感想</a><li><a href='onshape繪圖.html'>onshape繪圖</a></li></ul><li class='has-children'><a href='遇到問題.html'>遇到問題</a><ul class='dropdown'><li><a href='網頁錯誤.html'>網頁錯誤</a><li><a href='協同網頁推送.html'>協同網頁推送</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='直播紀錄.html'>直播紀錄</a><ul class='dropdown'><li><a href='第二週.html'>第二週</a><li><a href='第三週.html'>第三週</a><li><a href='第五週.html'>第五週</a><li><a href='第六週.html'>第六週</a><li><a href='第七週.html'>第七週</a><li><a href='第八週.html'>第八週</a><li><a href='第九週.html'>第九週</a><li><a href='第十週.html'>第十週</a><li><a href='第十一週.html'>第十一週</a><li><a href='第十二週.html'>第十二週</a><li><a href='第十三週.html'>第十三週</a><li><a href='第十四週.html'>第十四週</a><li><a href='第十五週.html'>第十五週</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w9.html'>w9</a></li></ul><li class='has-children'><a href='Assiganment2.html'>Assiganment2</a><ul class='dropdown'><li><a href='Top 0感想.html'>Top 0感想</a><li><a href='onshape繪圖.html'>onshape繪圖</a></li></ul><li class='has-children'><a href='遇到問題.html'>遇到問題</a><ul class='dropdown'><li><a href='網頁錯誤.html'>網頁錯誤</a><li><a href='協同網頁推送.html'>協同網頁推送</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">第七週 << <a href='第七週.html'>Previous</a> <a href='每周進度.html'>Next</a> >> 每周進度<br /><h1>第八週</h1>
+    <div id="tipue_search_content">第七週 << <a href='第七週.html'>Previous</a> <a href='第九週.html'>Next</a> >> 第九週<br /><h1>第八週</h1>
 <p>1.利用onshape繪製車子(不可過於簡易,要有懸吊系統跟一些複雜度)<br/>(1)了解零件檔案格式及如何轉檔導入coppeliasim<br/>(2)轉檔格式有幾個版本需要了解</p>
 <p>協同人員:40723104,40723107,40723122,40723140,40723149,40723151,40723153,40723154</p>
 <p>2.利用 CoppeliaSim Python Remote API 控制四輪車<br/>(1)了解 Python Remote API程式,並且能夠實際應用,對車子進行遠端遙控</p>
@@ -164,7 +164,7 @@ img.add_border {
 <p>(3)了解 Host - only Adapte</p>
 <p>繪圖內容分配</p>
 <p><img alt="" height="500" src="./../images/64586.jpg" width="283"/></p>
-<br />第七週 << <a href='第七週.html'>Previous</a> <a href='每周進度.html'>Next</a> >> 每周進度</div>
+<br />第七週 << <a href='第七週.html'>Previous</a> <a href='第九週.html'>Next</a> >> 第九週</div>
         
     <!-- footer -->
       <div class="container">
