每週進度更新

--- a/content/w12.html
+++ b/content/w12.html
@@ -154,18 +154,17 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">遇到問題 << <a href='遇到問題.html'>Previous</a> <a href='協同網頁推送.html'>Next</a> >> 協同網頁推送<br /><h1>網頁錯誤</h1>
-<p>在某次推送完畢之後動態網頁就無法打開編輯<img alt="" height="269" src="./../images/網頁錯誤.png" width="500"/></p>
-<p><span>▲網頁錯誤訊息</span></p>
-<p><img alt="" height="348" src="./../images/程式碼.png" width="500"/></p>
-<p><img alt="" height="350" src="./../images/程式碼2.png" width="500"/></p>
-<p><span>▲嘗試找尋問題修正但失敗</span></p>
-<p>發現無法解決問題詢問老師後從server端檢查</p>
-<p><img alt="" height="479" src="./../images/檢查是否python錯誤.png" width="500"/></p>
-<p>發現是推送和python版本錯誤,還原成前一個版本後更改設定</p>
-<p><img alt="" height="487" src="./../images/將舊版python更新.png" width="500"/></p>
-<p>重新執行就修復完成</p>
-<br />遇到問題 << <a href='遇到問題.html'>Previous</a> <a href='協同網頁推送.html'>Next</a> >> 協同網頁推送</div>
+    <div id="tipue_search_content">w11 << <a href='w11.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>w12</h1>
+<p>這週老師開始進行隨機分組協同編輯網頁 當被抽到時系統會寄信通知你</p>
+<p><img alt="" height="237" src="./../images/cdaw12.png" width="500"/></p>
+<p><span>▲通知協同信件</span></p>
+<p><img alt="" height="231" src="./../images/12網頁.png" width="500"/></p>
+<p><span>▲小組倉儲</span></p>
+<p><span>我們要學習和不同的組員在短時間內進行協同,並且要避免將倉儲推爆</span></p>
+<p><span>主要任務是在網頁上放上自己的本週進度,但因為是第一週實驗所以只放上個人資訊就沒時間了</span></p>
+<p><span><img alt="" height="254" src="./../images/12網頁1.png" width="500"/></span></p>
+<p><span>▲小組網頁</span></p>
+<br />w11 << <a href='w11.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
         
     <!-- footer -->
       <div class="container">
