--- a/config/content.htm
+++ b/config/content.htm
@@ -37,13 +37,19 @@
 <p>繪圖內容分配</p>
 <p><img alt="" height="500" src="/images/64586.jpg" width="283"/></p>
 <h2>第九週</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/opi_PrsUMW4" width="560"></iframe></p><h2>第十週</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/HauW6F-ez7w" width="560"></iframe></p><h2>第十一週</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Y-v5v3glZM4" width="560"></iframe></p><h2>第十二週</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Fwt_LDqD964" width="560"></iframe></p><h2>第十三週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/opi_PrsUMW4" width="560"></iframe></p>
+<h2>第十週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/HauW6F-ez7w" width="560"></iframe></p>
+<h2>第十一週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Y-v5v3glZM4" width="560"></iframe></p>
+<h2>第十二週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Fwt_LDqD964" width="560"></iframe></p>
+<h2>第十三週</h2>
 <h2>第十四週</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Oz_qyhhmopk" width="560"></iframe></p><h2>第十五週</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T4lDjSueeW4" width="560"></iframe></p><h1>每周進度</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Oz_qyhhmopk" width="560"></iframe></p>
+<h2>第十五週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T4lDjSueeW4" width="560"></iframe></p>
+<h1>每周進度</h1>
 <h2>w1</h2>
 <h4>本週進度</h4>
 <p>介紹學期目標和進度和建立倉儲cd2020和網頁</p>
@@ -113,6 +119,22 @@
 <h2>w9</h2>
 <p>紙本筆記</p>
 <p><img alt="" height="254" src="/images/64584.jpg" width="500"/></p>
+<h2>w10</h2>
+<h2>w11</h2>
+<h2>w12</h2>
+<p>這週老師開始進行隨機分組協同編輯網頁 當被抽到時系統會寄信通知你</p>
+<p><img alt="" height="237" src="/images/cdaw12.png" width="500"/></p>
+<p><span>▲通知協同信件</span></p>
+<p><img alt="" height="231" src="/images/12網頁.png" width="500"/></p>
+<p><span>▲小組倉儲</span></p>
+<p><span>我們要學習和不同的組員在短時間內進行協同,並且要避免將倉儲推爆</span></p>
+<p><span>主要任務是在網頁上放上自己的本週進度,但因為是第一週實驗所以只放上個人資訊就沒時間了</span></p>
+<p><span><img alt="" height="254" src="/images/12網頁1.png" width="500"/></span></p>
+<p><span>▲小組網頁</span></p>
+<h2>w13</h2>
+<h2>w14</h2>
+<h2>w15</h2>
+<h2>w16</h2>
 <h1>Assiganment2</h1>
 <h2>Top 0感想</h2>
 <p>40723153 吳佳穎</p>
@@ -125,12 +147,15 @@
 <p><span>▲工作分配圖</span></p>
 <p><span><img caption="false" height="225" src="/images/onshap畫圖.png" width="500"/></span></p>
 <p><span>▲練習繪製各式零件</span></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Qg9Jmt8famM" width="560"></iframe><span>▲繪圖練習影片</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Qg9Jmt8famM" width="560"></iframe></p>
+<p><span>▲繪圖練習影片</span></p>
 <h1>遇到問題</h1>
 <h2>網頁錯誤</h2>
 <p>在某次推送完畢之後動態網頁就無法打開編輯<img alt="" height="269" src="/images/網頁錯誤.png" width="500"/></p>
+<p><span>▲網頁錯誤訊息</span></p>
 <p><img alt="" height="348" src="/images/程式碼.png" width="500"/></p>
 <p><img alt="" height="350" src="/images/程式碼2.png" width="500"/></p>
+<p><span>▲嘗試找尋問題修正但失敗</span></p>
 <p>發現無法解決問題詢問老師後從server端檢查</p>
 <p><img alt="" height="479" src="/images/檢查是否python錯誤.png" width="500"/></p>
 <p>發現是推送和python版本錯誤,還原成前一個版本後更改設定</p>
