--- a/content/w14.html
+++ b/content/w14.html
@@ -154,18 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">遇到問題 << <a href='遇到問題.html'>Previous</a> <a href='協同網頁推送.html'>Next</a> >> 協同網頁推送<br /><h1>網頁錯誤</h1>
-<p>在某次推送完畢之後動態網頁就無法打開編輯<img alt="" height="269" src="./../images/網頁錯誤.png" width="500"/></p>
-<p><span>▲網頁錯誤訊息</span></p>
-<p><img alt="" height="348" src="./../images/程式碼.png" width="500"/></p>
-<p><img alt="" height="350" src="./../images/程式碼2.png" width="500"/></p>
-<p><span>▲嘗試找尋問題修正但失敗</span></p>
-<p>發現無法解決問題詢問老師後從server端檢查</p>
-<p><img alt="" height="479" src="./../images/檢查是否python錯誤.png" width="500"/></p>
-<p>發現是推送和python版本錯誤,還原成前一個版本後更改設定</p>
-<p><img alt="" height="487" src="./../images/將舊版python更新.png" width="500"/></p>
-<p>重新執行就修復完成</p>
-<br />遇到問題 << <a href='遇到問題.html'>Previous</a> <a href='協同網頁推送.html'>Next</a> >> 協同網頁推送</div>
+    <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='w15.html'>Next</a> >> w15<br /><h1>w14</h1>
+<br />w13 << <a href='w13.html'>Previous</a> <a href='w15.html'>Next</a> >> w15</div>
         
     <!-- footer -->
       <div class="container">
