--- a/content/第十二週.html
+++ b/content/第十二週.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='直播紀錄.html'>直播紀錄</a><ul class='dropdown'><li><a href='第二週.html'>第二週</a><li><a href='第三週.html'>第三週</a><li><a href='第五週.html'>第五週</a><li><a href='第六週.html'>第六週</a><li><a href='第七週.html'>第七週</a><li><a href='第八週.html'>第八週</a><li><a href='第九週.html'>第九週</a><li><a href='第十週.html'>第十週</a><li><a href='第十一週.html'>第十一週</a><li><a href='第十二週.html'>第十二週</a><li><a href='第十三週.html'>第十三週</a><li><a href='第十四週.html'>第十四週</a><li><a href='第十五週.html'>第十五週</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w9.html'>w9</a></li></ul><li class='has-children'><a href='Assiganment2.html'>Assiganment2</a><ul class='dropdown'><li><a href='Top 0感想.html'>Top 0感想</a><li><a href='onshape繪圖.html'>onshape繪圖</a></li></ul><li class='has-children'><a href='遇到問題.html'>遇到問題</a><ul class='dropdown'><li><a href='網頁錯誤.html'>網頁錯誤</a><li><a href='協同網頁推送.html'>協同網頁推送</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='直播紀錄.html'>直播紀錄</a><ul class='dropdown'><li><a href='第二週.html'>第二週</a><li><a href='第三週.html'>第三週</a><li><a href='第五週.html'>第五週</a><li><a href='第六週.html'>第六週</a><li><a href='第七週.html'>第七週</a><li><a href='第八週.html'>第八週</a><li><a href='第九週.html'>第九週</a><li><a href='第十週.html'>第十週</a><li><a href='第十一週.html'>第十一週</a><li><a href='第十二週.html'>第十二週</a><li><a href='第十三週.html'>第十三週</a><li><a href='第十四週.html'>第十四週</a><li><a href='第十五週.html'>第十五週</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w9.html'>w9</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a></li></ul><li class='has-children'><a href='Assiganment2.html'>Assiganment2</a><ul class='dropdown'><li><a href='Top 0感想.html'>Top 0感想</a><li><a href='onshape繪圖.html'>onshape繪圖</a></li></ul><li class='has-children'><a href='遇到問題.html'>遇到問題</a><ul class='dropdown'><li><a href='網頁錯誤.html'>網頁錯誤</a><li><a href='協同網頁推送.html'>協同網頁推送</a></li>
                       </ul>
                 </nav>
               </div>
@@ -155,7 +155,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">第十一週 << <a href='第十一週.html'>Previous</a> <a href='第十三週.html'>Next</a> >> 第十三週<br /><h1>第十二週</h1>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Fwt_LDqD964" width="560"></iframe></p><br />第十一週 << <a href='第十一週.html'>Previous</a> <a href='第十三週.html'>Next</a> >> 第十三週</div>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Fwt_LDqD964" width="560"></iframe></p>
+<br />第十一週 << <a href='第十一週.html'>Previous</a> <a href='第十三週.html'>Next</a> >> 第十三週</div>
         
     <!-- footer -->
       <div class="container">
