新增作業分類

--- a/config/content.htm
+++ b/config/content.htm
@@ -135,7 +135,9 @@
 <h2>w14</h2>
 <h2>w15</h2>
 <h2>w16</h2>
-<h1>Assiganment2</h1>
+<h1>Assiganment1</h1>
+<h2>更新python</h2>
+<h2>亂數分組</h2><h1>Assiganment2</h1>
 <h2>Top 0感想</h2>
 <p>40723153 吳佳穎</p>
 <p>合作不只是行為更是一種未來的趨勢，從古至今合作的觀念一直是被推崇的，從【單絲不成線，獨木不成林】 、【萬人操弓，共射一招，招無不中】。等諺語就能知道。在工作上一個人或許可以迅速的決定所有事情，但一個人絕對比不上數個人加起來的能力，透過合作讓每個人發揮自己的特長讓效率以倍數增加。看完這個章節讓我更加理解到協同的重要性，而在協同前也需要做許多的準備，無論是個人心態的調整抑或是選用協同的工具都是非常重要的，我也學到了很多協同的優點，讓我印象深刻的是能讓客戶參與產品設計過程，透過讓客戶的參與能加速溝通的效率，更能讓消費端理解設計者的用意和進度過程，創造雙贏的局面。</p>
@@ -149,7 +151,8 @@
 <p><span>▲練習繪製各式零件</span></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Qg9Jmt8famM" width="560"></iframe></p>
 <p><span>▲繪圖練習影片</span></p>
-<h1>遇到問題</h1>
+<h2>webots介紹翻譯</h2><h1>Assiganment3</h1>
+<h2>虛擬主機設定</h2><h1>遇到問題</h1>
 <h2>網頁錯誤</h2>
 <p>在某次推送完畢之後動態網頁就無法打開編輯<img alt="" height="269" src="/images/網頁錯誤.png" width="500"/></p>
 <p><span>▲網頁錯誤訊息</span></p>
