--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -37,14 +37,20 @@
 <p>繪圖內容分配</p>
 <p><img alt="" height="500" src="/images/64586.jpg" width="283"/></p>
 <h2>第九週</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/opi_PrsUMW4" width="560"></iframe></p><h2>第十週</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/HauW6F-ez7w" width="560"></iframe></p><h2>第十一週</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Y-v5v3glZM4" width="560"></iframe></p><h2>第十二週</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Fwt_LDqD964" width="560"></iframe></p><h2>第十三週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/opi_PrsUMW4" width="560"></iframe></p>
+<h2>第十週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/HauW6F-ez7w" width="560"></iframe></p>
+<h2>第十一週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Y-v5v3glZM4" width="560"></iframe></p>
+<h2>第十二週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Fwt_LDqD964" width="560"></iframe></p>
+<h2>第十三週</h2>
 <h2>第十四週</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Oz_qyhhmopk" width="560"></iframe></p><h2>第十五週</h2>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T4lDjSueeW4" width="560"></iframe></p><h1>每周進度</h1>
-<h1>Assiganment 1</h1><h2>w1</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Oz_qyhhmopk" width="560"></iframe></p>
+<h2>第十五週</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T4lDjSueeW4" width="560"></iframe></p>
+<h1>每周進度</h1>
+<h2>w1</h2>
 <h4>本週進度</h4>
 <p>介紹學期目標和進度和建立倉儲cd2020和網頁</p>
 <p><img alt="" height="432" src="/images/3444.png" width="768"/></p>
@@ -124,10 +130,14 @@
 <p><span>我們要學習和不同的組員在短時間內進行協同,並且要避免將倉儲推爆</span></p>
 <p><span>主要任務是在網頁上放上自己的本週進度,但因為是第一週實驗所以只放上個人資訊就沒時間了</span></p>
 <p><span><img alt="" height="254" src="/images/12網頁1.png" width="500"/></span></p>
-<p><span>▲小組網頁</span></p><h2>w13</h2>
+<p><span>▲小組網頁</span></p>
+<h2>w13</h2>
 <h2>w14</h2>
 <h2>w15</h2>
-<h2>w16</h2><h1>Assiganment2</h1>
+<h2>w16</h2>
+<h1>Assiganment1</h1>
+<h2>更新python</h2>
+<h2>亂數分組</h2><h1>Assiganment2</h1>
 <h2>Top 0感想</h2>
 <p>40723153 吳佳穎</p>
 <p>合作不只是行為更是一種未來的趨勢，從古至今合作的觀念一直是被推崇的，從【單絲不成線，獨木不成林】 、【萬人操弓，共射一招，招無不中】。等諺語就能知道。在工作上一個人或許可以迅速的決定所有事情，但一個人絕對比不上數個人加起來的能力，透過合作讓每個人發揮自己的特長讓效率以倍數增加。看完這個章節讓我更加理解到協同的重要性，而在協同前也需要做許多的準備，無論是個人心態的調整抑或是選用協同的工具都是非常重要的，我也學到了很多協同的優點，讓我印象深刻的是能讓客戶參與產品設計過程，透過讓客戶的參與能加速溝通的效率，更能讓消費端理解設計者的用意和進度過程，創造雙贏的局面。</p>
@@ -140,7 +150,9 @@
 <p><span><img caption="false" height="225" src="/images/onshap畫圖.png" width="500"/></span></p>
 <p><span>▲練習繪製各式零件</span></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Qg9Jmt8famM" width="560"></iframe></p>
-<p><span>▲繪圖練習影片</span></p><h1>遇到問題</h1>
+<p><span>▲繪圖練習影片</span></p>
+<h2>webots介紹翻譯</h2><h1>Assiganment3</h1>
+<h1>遇到問題</h1>
 <h2>網頁錯誤</h2>
 <p>在某次推送完畢之後動態網頁就無法打開編輯<img alt="" height="269" src="/images/網頁錯誤.png" width="500"/></p>
 <p><span>▲網頁錯誤訊息</span></p>
@@ -151,7 +163,8 @@
 <p><img alt="" height="479" src="/images/檢查是否python錯誤.png" width="500"/></p>
 <p>發現是推送和python版本錯誤,還原成前一個版本後更改設定</p>
 <p><img alt="" height="487" src="/images/將舊版python更新.png" width="500"/></p>
-<p>重新執行就修復完成</p><h2>協同網頁推送</h2>
+<p>重新執行就修復完成</p>
+<h2>協同網頁推送</h2>
 <p>在12~16週老師每週都會隨機抽取同學進行分組協同編輯網頁</p>
 <p>但每次推送常會有不小心將倉儲或是網頁爆炸的情況</p>
 <p>所以在推送之前需要的步驟有以下幾點</p>
