--- a/content/更新python.html
+++ b/content/更新python.html
@@ -154,8 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">第十五週 << <a href='第十五週.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>每周進度</h1>
-<br />第十五週 << <a href='第十五週.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+    <div id="tipue_search_content">Assiganment1 << <a href='Assiganment1.html'>Previous</a> <a href='亂數分組.html'>Next</a> >> 亂數分組<br /><h1>更新python</h1>
+<br />Assiganment1 << <a href='Assiganment1.html'>Previous</a> <a href='亂數分組.html'>Next</a> >> 亂數分組</div>
         
     <!-- footer -->
       <div class="container">
