--- a/content/Assiganment1.html
+++ b/content/Assiganment1.html
@@ -154,8 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">第十五週 << <a href='第十五週.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>每周進度</h1>
-<br />第十五週 << <a href='第十五週.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+    <div id="tipue_search_content">w16 << <a href='w16.html'>Previous</a> <a href='更新python.html'>Next</a> >> 更新python<br /><h1>Assiganment1</h1>
+<br />w16 << <a href='w16.html'>Previous</a> <a href='更新python.html'>Next</a> >> 更新python</div>
         
     <!-- footer -->
       <div class="container">
