--- a/content/Assiganment3.html
+++ b/content/Assiganment3.html
@@ -154,8 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">第十五週 << <a href='第十五週.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>每周進度</h1>
-<br />第十五週 << <a href='第十五週.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+    <div id="tipue_search_content">webots介紹翻譯 << <a href='webots介紹翻譯.html'>Previous</a> <a href='虛擬主機設定.html'>Next</a> >> 虛擬主機設定<br /><h1>Assiganment3</h1>
+<br />webots介紹翻譯 << <a href='webots介紹翻譯.html'>Previous</a> <a href='虛擬主機設定.html'>Next</a> >> 虛擬主機設定</div>
         
     <!-- footer -->
       <div class="container">
