--- a/content/webots介紹翻譯.html
+++ b/content/webots介紹翻譯.html
@@ -154,8 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">第十五週 << <a href='第十五週.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>每周進度</h1>
-<br />第十五週 << <a href='第十五週.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+    <div id="tipue_search_content">onshape繪圖 << <a href='onshape繪圖.html'>Previous</a> <a href='Assiganment3.html'>Next</a> >> Assiganment3<br /><h1>webots介紹翻譯</h1><br />onshape繪圖 << <a href='onshape繪圖.html'>Previous</a> <a href='Assiganment3.html'>Next</a> >> Assiganment3</div>
         
     <!-- footer -->
       <div class="container">
