--- a/content/亂數分組.html
+++ b/content/亂數分組.html
@@ -154,8 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">第十五週 << <a href='第十五週.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>每周進度</h1>
-<br />第十五週 << <a href='第十五週.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+    <div id="tipue_search_content">更新python << <a href='更新python.html'>Previous</a> <a href='Assiganment2.html'>Next</a> >> Assiganment2<br /><h1>亂數分組</h1><br />更新python << <a href='更新python.html'>Previous</a> <a href='Assiganment2.html'>Next</a> >> Assiganment2</div>
         
     <!-- footer -->
       <div class="container">
