--- a/content/虛擬主機設定.html
+++ b/content/虛擬主機設定.html
@@ -154,8 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">第十五週 << <a href='第十五週.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>每周進度</h1>
-<br />第十五週 << <a href='第十五週.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+    <div id="tipue_search_content">Assiganment3 << <a href='Assiganment3.html'>Previous</a> <a href='遇到問題.html'>Next</a> >> 遇到問題<br /><h1>虛擬主機設定</h1><br />Assiganment3 << <a href='Assiganment3.html'>Previous</a> <a href='遇到問題.html'>Next</a> >> 遇到問題</div>
         
     <!-- footer -->
       <div class="container">
