--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -152,9 +152,10 @@
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Qg9Jmt8famM" width="560"></iframe></p>
 <p><span>▲繪圖練習影片</span></p>
 <h2>webots介紹翻譯</h2><h1>Assiganment3</h1>
-<h1>遇到問題</h1>
+<h2>虛擬主機設定</h2><h1>遇到問題</h1>
 <h2>網頁錯誤</h2>
-<p>在某次推送完畢之後動態網頁就無法打開編輯<img alt="" height="269" src="/images/網頁錯誤.png" width="500"/></p>
+<p>在某次推送完畢之後動態網頁就無法打開編輯</p>
+<p><img alt="" height="269" src="/images/網頁錯誤.png" width="500"/></p>
 <p><span>▲網頁錯誤訊息</span></p>
 <p><img alt="" height="348" src="/images/程式碼.png" width="500"/></p>
 <p><img alt="" height="350" src="/images/程式碼2.png" width="500"/></p>
@@ -163,8 +164,7 @@
 <p><img alt="" height="479" src="/images/檢查是否python錯誤.png" width="500"/></p>
 <p>發現是推送和python版本錯誤,還原成前一個版本後更改設定</p>
 <p><img alt="" height="487" src="/images/將舊版python更新.png" width="500"/></p>
-<p>重新執行就修復完成</p>
-<h2>協同網頁推送</h2>
+<p>重新執行就修復完成</p><h2>協同網頁推送</h2>
 <p>在12~16週老師每週都會隨機抽取同學進行分組協同編輯網頁</p>
 <p>但每次推送常會有不小心將倉儲或是網頁爆炸的情況</p>
 <p>所以在推送之前需要的步驟有以下幾點</p>
@@ -177,3 +177,11 @@
 <p><img alt="" height="333" src="/images/偕同網頁修正.png" width="500"/></p>
 <p><span style="color: #ff0000;">解決方法:</span></p>
 <p>再次使用python 進入動態網頁將錯誤修正並轉為靜態網頁後即可成功推送無衝突版本</p>
+<h2>leo打不開</h2>
+<p>在準備編輯reval簡報時發現leo檔打不開</p>
+<p><img alt="" height="182" src="/images/messageImage_1593442588744.jpg" width="500"/></p>
+<p>使用 pip list 檢查發現是未下載最新的leo檔</p>
+<p><img alt="" height="171" src="/images/leo.png" width="500"/></p>
+<p><span>▲使用 pip install leo==6.2.1 </span><span>指定安裝 leo 6.2.1 版本</span></p>
+<p><span><img alt="" height="312" src="/images/messageImage_1593446465322.jpg" width="500"/></span></p>
+<p><span>▲即可成功開啟leo</span></p>
