--- a/content/leo打不開.html
+++ b/content/leo打不開.html
@@ -154,9 +154,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">第十三週 << <a href='第十三週.html'>Previous</a> <a href='第十五週.html'>Next</a> >> 第十五週<br /><h1>第十四週</h1>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Oz_qyhhmopk" width="560"></iframe></p>
-<br />第十三週 << <a href='第十三週.html'>Previous</a> <a href='第十五週.html'>Next</a> >> 第十五週</div>
+    <div id="tipue_search_content">協同網頁推送 << <a href='協同網頁推送.html'>Previous</a> <br /><h1>leo打不開</h1>
+<p>在準備編輯reval簡報時發現leo檔打不開</p>
+<p><img alt="" height="182" src="./../images/messageImage_1593442588744.jpg" width="500"/></p>
+<p>使用 pip list 檢查發現是未下載最新的leo檔</p>
+<p><img alt="" height="171" src="./../images/leo.png" width="500"/></p>
+<p><span>▲使用 pip install leo==6.2.1 </span><span>指定安裝 leo 6.2.1 版本</span></p>
+<p><span><img alt="" height="312" src="./../images/messageImage_1593446465322.jpg" width="500"/></span></p>
+<p><span>▲即可成功開啟leo</span></p><br />協同網頁推送 << <a href='協同網頁推送.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
