--- a/config/content.htm
+++ b/config/content.htm
@@ -139,9 +139,8 @@
 <h2>更新python</h2>
 <h2>亂數分組</h2><h1>Assiganment2</h1>
 <h2>Top 0感想</h2>
-<p>40723153 吳佳穎</p>
-<p>合作不只是行為更是一種未來的趨勢，從古至今合作的觀念一直是被推崇的，從【單絲不成線，獨木不成林】 、【萬人操弓，共射一招，招無不中】。等諺語就能知道。在工作上一個人或許可以迅速的決定所有事情，但一個人絕對比不上數個人加起來的能力，透過合作讓每個人發揮自己的特長讓效率以倍數增加。看完這個章節讓我更加理解到協同的重要性，而在協同前也需要做許多的準備，無論是個人心態的調整抑或是選用協同的工具都是非常重要的，我也學到了很多協同的優點，讓我印象深刻的是能讓客戶參與產品設計過程，透過讓客戶的參與能加速溝通的效率，更能讓消費端理解設計者的用意和進度過程，創造雙贏的局面。</p>
-<h2>onshape繪圖</h2>
+<p><span style="color: #ff6600;">40723153 吳佳穎</span></p>
+<p>合作不只是行為更是一種未來的趨勢，從古至今合作的觀念一直是被推崇的，從【單絲不成線，獨木不成林】 、【萬人操弓，共射一招，招無不中】。等諺語就能知道。在工作上一個人或許可以迅速的決定所有事情，但一個人絕對比不上數個人加起來的能力，透過合作讓每個人發揮自己的特長讓效率以倍數增加。看完這個章節讓我更加理解到協同的重要性，而在協同前也需要做許多的準備，無論是個人心態的調整抑或是選用協同的工具都是非常重要的，我也學到了很多協同的優點，讓我印象深刻的是能讓客戶參與產品設計過程，透過讓客戶的參與能加速溝通的效率，更能讓消費端理解設計者的用意和進度過程，創造雙贏的局面。</p><h2>onshape繪圖</h2>
 <p>作業其中一項是需要在onshape上繪圖,並協同共用零件進行組裝</p>
 <p>雖然沒有被分配到需要繪製零件但仍舊可以自己進行練習</p>
 <p>學習繪圖和共用的方法</p>
@@ -154,7 +153,8 @@
 <h2>webots介紹翻譯</h2><h1>Assiganment3</h1>
 <h2>虛擬主機設定</h2><h1>遇到問題</h1>
 <h2>網頁錯誤</h2>
-<p>在某次推送完畢之後動態網頁就無法打開編輯<img alt="" height="269" src="/images/網頁錯誤.png" width="500"/></p>
+<p>在某次推送完畢之後動態網頁就無法打開編輯</p>
+<p><img alt="" height="269" src="/images/網頁錯誤.png" width="500"/></p>
 <p><span>▲網頁錯誤訊息</span></p>
 <p><img alt="" height="348" src="/images/程式碼.png" width="500"/></p>
 <p><img alt="" height="350" src="/images/程式碼2.png" width="500"/></p>
@@ -163,8 +163,7 @@
 <p><img alt="" height="479" src="/images/檢查是否python錯誤.png" width="500"/></p>
 <p>發現是推送和python版本錯誤,還原成前一個版本後更改設定</p>
 <p><img alt="" height="487" src="/images/將舊版python更新.png" width="500"/></p>
-<p>重新執行就修復完成</p>
-<h2>協同網頁推送</h2>
+<p>重新執行就修復完成</p><h2>協同網頁推送</h2>
 <p>在12~16週老師每週都會隨機抽取同學進行分組協同編輯網頁</p>
 <p>但每次推送常會有不小心將倉儲或是網頁爆炸的情況</p>
 <p>所以在推送之前需要的步驟有以下幾點</p>
@@ -177,3 +176,11 @@
 <p><img alt="" height="333" src="/images/偕同網頁修正.png" width="500"/></p>
 <p><span style="color: #ff0000;">解決方法:</span></p>
 <p>再次使用python 進入動態網頁將錯誤修正並轉為靜態網頁後即可成功推送無衝突版本</p>
+<h2>leo打不開</h2>
+<p>在準備編輯reval簡報時發現leo檔打不開</p>
+<p><img alt="" height="182" src="/images/messageImage_1593442588744.jpg" width="500"/></p>
+<p>使用 pip list 檢查發現是未下載最新的leo檔</p>
+<p><img alt="" height="171" src="/images/leo.png" width="500"/></p>
+<p><span>▲使用 pip install leo==6.2.1 </span><span>指定安裝 leo 6.2.1 版本</span></p>
+<p><span><img alt="" height="312" src="/images/messageImage_1593446465322.jpg" width="500"/></span></p>
+<p><span>▲即可成功開啟leo</span></p>
