--- a/content/協同網頁推送.html
+++ b/content/協同網頁推送.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='直播紀錄.html'>直播紀錄</a><ul class='dropdown'><li><a href='第二週.html'>第二週</a><li><a href='第三週.html'>第三週</a><li><a href='第五週.html'>第五週</a><li><a href='第六週.html'>第六週</a><li><a href='第七週.html'>第七週</a><li><a href='第八週.html'>第八週</a><li><a href='第九週.html'>第九週</a><li><a href='第十週.html'>第十週</a><li><a href='第十一週.html'>第十一週</a><li><a href='第十二週.html'>第十二週</a><li><a href='第十三週.html'>第十三週</a><li><a href='第十四週.html'>第十四週</a><li><a href='第十五週.html'>第十五週</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w9.html'>w9</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a></li></ul><li class='has-children'><a href='Assiganment1.html'>Assiganment1</a><ul class='dropdown'><li><a href='更新python.html'>更新python</a><li><a href='亂數分組.html'>亂數分組</a></li></ul><li class='has-children'><a href='Assiganment2.html'>Assiganment2</a><ul class='dropdown'><li><a href='Top 0感想.html'>Top 0感想</a><li><a href='onshape繪圖.html'>onshape繪圖</a><li><a href='webots介紹翻譯.html'>webots介紹翻譯</a></li></ul><li class='has-children'><a href='Assiganment3.html'>Assiganment3</a><ul class='dropdown'><li><a href='虛擬主機設定.html'>虛擬主機設定</a></li></ul><li class='has-children'><a href='遇到問題.html'>遇到問題</a><ul class='dropdown'><li><a href='網頁錯誤.html'>網頁錯誤</a><li><a href='協同網頁推送.html'>協同網頁推送</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='直播紀錄.html'>直播紀錄</a><ul class='dropdown'><li><a href='第二週.html'>第二週</a><li><a href='第三週.html'>第三週</a><li><a href='第五週.html'>第五週</a><li><a href='第六週.html'>第六週</a><li><a href='第七週.html'>第七週</a><li><a href='第八週.html'>第八週</a><li><a href='第九週.html'>第九週</a><li><a href='第十週.html'>第十週</a><li><a href='第十一週.html'>第十一週</a><li><a href='第十二週.html'>第十二週</a><li><a href='第十三週.html'>第十三週</a><li><a href='第十四週.html'>第十四週</a><li><a href='第十五週.html'>第十五週</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w9.html'>w9</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a></li></ul><li class='has-children'><a href='Assiganment1.html'>Assiganment1</a><ul class='dropdown'><li><a href='更新python.html'>更新python</a><li><a href='亂數分組.html'>亂數分組</a></li></ul><li class='has-children'><a href='Assiganment2.html'>Assiganment2</a><ul class='dropdown'><li><a href='Top 0感想.html'>Top 0感想</a><li><a href='onshape繪圖.html'>onshape繪圖</a><li><a href='webots介紹翻譯.html'>webots介紹翻譯</a></li></ul><li class='has-children'><a href='Assiganment3.html'>Assiganment3</a><ul class='dropdown'><li><a href='虛擬主機設定.html'>虛擬主機設定</a></li></ul><li class='has-children'><a href='遇到問題.html'>遇到問題</a><ul class='dropdown'><li><a href='網頁錯誤.html'>網頁錯誤</a><li><a href='協同網頁推送.html'>協同網頁推送</a><li><a href='leo打不開.html'>leo打不開</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">網頁錯誤 << <a href='網頁錯誤.html'>Previous</a> <br /><h1>協同網頁推送</h1>
+    <div id="tipue_search_content">網頁錯誤 << <a href='網頁錯誤.html'>Previous</a> <a href='leo打不開.html'>Next</a> >> leo打不開<br /><h1>協同網頁推送</h1>
 <p>在12~16週老師每週都會隨機抽取同學進行分組協同編輯網頁</p>
 <p>但每次推送常會有不小心將倉儲或是網頁爆炸的情況</p>
 <p>所以在推送之前需要的步驟有以下幾點</p>
@@ -166,7 +166,8 @@ img.add_border {
 <p>若是遠端和近端有差異會產生以下訊息</p>
 <p><img alt="" height="333" src="./../images/偕同網頁修正.png" width="500"/></p>
 <p><span style="color: #ff0000;">解決方法:</span></p>
-<p>再次使用python 進入動態網頁將錯誤修正並轉為靜態網頁後即可成功推送無衝突版本</p><br />網頁錯誤 << <a href='網頁錯誤.html'>Previous</a> </div>
+<p>再次使用python 進入動態網頁將錯誤修正並轉為靜態網頁後即可成功推送無衝突版本</p>
+<br />網頁錯誤 << <a href='網頁錯誤.html'>Previous</a> <a href='leo打不開.html'>Next</a> >> leo打不開</div>
         
     <!-- footer -->
       <div class="container">
